tests/cases/parser/types/incomplete_ty_params.stderr
error: unexpectedly encountered a `(...)`
 --> $DIR/incomplete_ty_params.hash:4:20
2 |    
3 |    {
4 |        T := struct<U, (
  |  _____________________-
5 | |          beep: T,
6 | |      )
  | |______- 
7 |    }
8 |    
  = help: expected either `identifier`, or `>`

error: expected struct definition entries here which begin with a `<` or `(`, however received the identifier `U`
  --> $DIR/incomplete_ty_params.hash:10:17
 9 |   {
10 |       T := struct U,> (
   |                   ^ 
11 |           beep: T,
   = help: expected a `(`

error: unexpectedly encountered a `,`
  --> $DIR/incomplete_ty_params.hash:16:16
15 |   {
16 |       T := enum <,> (
   |                  ^ 
17 |           beep: T,
   = help: expected either `identifier`, or `>`

error: unexpectedly encountered a `{...}`
  --> $DIR/incomplete_ty_params.hash:28:18
26 |    
27 |    {
28 |        T := trait < { // missing `>`
   |  ___________________-
29 | |          mux: () -> char;
30 | |      }
   | |______- 
31 |    }
   = help: expected either `identifier`, or `>`

warn: useless type parameters on this `trait` definition
  --> $DIR/incomplete_ty_params.hash:22:16
21 |   {
22 |       T := trait <> {
   |                  ^^ remove this `<>`
23 |           mux: () -> char;
