tests/cases/parser/types/incomplete_ty_params.hash
// run=fail, stage=parse

{
    T := struct<U, (
        beep: T,
    );
};

{
    T := struct U,> (
        beep: T,
    );
};

{
    T := enum <,> (
        beep: T,
    );
};

{
    T := trait <> {
        mux: () -> char;
    };
};

{
    T := trait < { // missing `>`
        mux: () -> char;
    };
};
